# GildedRose-Refactoring-Kata

./: Makefile  main.py  pyproject.toml  start_texttest.sh
Java/: texttest_rig.py
Kotlin/: texttest_rig.py
TypeScript/: texttest_rig.py
TypeScript-deno/: texttest_rig.py
python/: gilded_rose.py  texttest_fixture.py
python/tests/: test_gilded_rose.py  test_gilded_rose_approvals.py
