[project]
name = "gildedrose-refactoring-kata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # "approvaltests>=15.3.2",
    "coverage>=7.10.6",
    "pytest>=8.4.1",
    # "pytest-approvaltests>=0.2.4",
    "pytest-watcher>=0.4.3",
    "ruff>=0.12.11",
    "texttest>=4.4.4",
]
